--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,9 @@ dependencies = [
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.6",
+    "ty>=0.0.1a16",
+]
